lowering jdk version & refactoring target class collection